--- a/mySite/package.json
+++ b/mySite/package.json
@@ -26,6 +26,9 @@
     "gh-pages": "^3.2.3",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-markdown": "^7.1.0",
+    "react-syntax-highlighter": "^15.4.5",
+    "rehype-raw": "^6.1.0",
     "umi": "^3.5.20"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@umijs/test": "^3.5.20",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
+    "raw-loader": "^4.0.2",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   }
